--- a/all.css
+++ b/all.css
@@ -11,6 +11,12 @@ h1 {
 
 }
 
+h2 {
+	text-align: center;
+	font-size : 2em;
+	text-decoration: underline;
+}
+
 #inserting {
 	width: max-content;
 	margin: 20px;
@@ -33,7 +39,7 @@ h1 {
 }
 
 #score.bad{
-	color : darkgray;
+	color : rgb(82, 76, 76);
 }
 
 #score.good{
