--- a/all.css
+++ b/all.css
@@ -3,6 +3,8 @@
 html, body {
 	width: 100vw;
 	background-color: lightblue;
+	scrollbar-width: 0;
+	overflow-x: hidden;
 }
 
 h1 {
@@ -18,7 +20,7 @@ h2 {
 }
 
 #inserting {
-	width: max-content;
+	max-width: 90vw;
 	margin: 20px;
 }
 
