--- a/tests.css
+++ b/tests.css
@@ -36,14 +36,16 @@ h2 {
 }
 
 /* Ceci permet de cacher la barre de défilement */
-#inserting, .insParent {
+#inserting,
+.insParent {
 	-ms-overflow-style: none;
 	/* Internet Explorer 10+ */
 	scrollbar-width: none;
 	/* Firefox */
 }
 
-#inserting::-webkit-scrollbar, .insParent::-webkit-scrollbar {
+#inserting::-webkit-scrollbar,
+.insParent::-webkit-scrollbar {
 	display: none;
 	/* Safari and Chrome */
 }
@@ -54,7 +56,7 @@ h2 {
 	display: flex;
 	/* justify-content: space-between; */
 	align-items: center;
-
+	height: 2em;
 }
 
 #score {
