--- a/all.css
+++ b/all.css
@@ -7,6 +7,11 @@ body {
 	overflow: hidden;
 }
 
+@font-face {
+	font-family: Poppins;
+	src: url(assets/fonts/Poppins/Poppins-Regular.ttf);
+}
+
 h1 {
 	text-align: center;
 	font-size: 2.5em;
@@ -18,6 +23,16 @@ h2 {
 	font-size: 2em;
 	text-decoration: underline;
 }
+
+p,
+a,
+h1,
+h2,
+button {
+	font-family: 'Poppins';
+}
+
+
 
 .insParent {
 	width: 100vw;
@@ -87,4 +102,8 @@ h2 {
 
 .answers {
 	width: 8em;
+}
+
+.hide {
+	display: none;
 }
