--- a/all.css
+++ b/all.css
@@ -1,10 +1,15 @@
 /* Feuille de style pour toutes les pages */
 
-html,
-body {
+html {
 	width: 100vw;
 	background-color: lightblue;
-	overflow: hidden;
+	/* overflow: hidden; */
+	margin: 0;
+}
+
+body {
+	margin: 0 1em;
+	background-color: lightblue;
 }
 
 @font-face {
@@ -14,13 +19,13 @@ body {
 
 h1 {
 	text-align: center;
-	font-size: 2.5em;
+	font-size: 3em;
 
 }
 
 h2 {
 	text-align: center;
-	font-size: 2em;
+	font-size: 2.5em;
 	text-decoration: underline;
 }
 
@@ -32,6 +37,9 @@ button {
 	font-family: 'Poppins';
 }
 
+p,a,button {
+	font-size: 1.7em;
+}
 
 
 .insParent {
@@ -69,10 +77,11 @@ button {
 	width: 90vw;
 	margin: 0 5vw;
 	display: flex;
-	/* justify-content: space-between; */
 	align-items: center;
 	height: 2em;
 }
+
+/* Score styling */
 
 #score {
 	font-family: helvetica;
@@ -94,6 +103,8 @@ button {
 #score.vgood {
 	color: #39f60f;
 }
+
+/* Reste */
 
 .katex-question {
 	font-size: 1em;
