--- a/all.css
+++ b/all.css
@@ -3,7 +3,7 @@
 html {
 	width: 100vw;
 	background-color: lightblue;
-	overflow: hidden;
+	overflow-x: hidden;
 	margin: 0;
 	font-family: "Poppins";
 }
