--- a/index.css
+++ b/index.css
@@ -11,15 +11,16 @@ h1 {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
+	align-content: space-around;
 	margin: 0 1em;
 }
 
 .pages>* {
 	padding: 0.6em;
-	margin: .3em;
+	margin: .3em 1em;
 	background-color: lightcoral;
 	border-radius: 1em;
-	transition: transform .2s;
+	transition: transform .5s;
 	text-decoration: none;
 	color: black;
 }
@@ -27,4 +28,23 @@ h1 {
 .pages :hover {
 	background-color: orange;
 	transform: scale(1.3);
+}
+
+.footer {
+	display: flex;
+	width: calc(100vw - 2em);
+	padding: 0 1em;
+	justify-content: space-between;
+	bottom: 0;
+	left: 0;
+	position: absolute;
+	background-color: #1a1a1a;
+
+}
+
+.footer>p,
+.footer>a {
+	margin: 0;
+	color: #ccc;
+
 }
