--- a/index.css
+++ b/index.css
@@ -1,6 +1,11 @@
 /* Feuille de style pour la page index.html */
 
-/* body {} */
+html,
+body {
+	min-height: 100vh;
+	margin:0;
+	position: relative;
+}
 
 h1 {
 	text-decoration: solid underline lightcoral;
@@ -34,12 +39,12 @@ h1 {
 	display: flex;
 	width: calc(100vw - 2em);
 	padding: 0 1em;
+	margin: 1em 0 0 0;
 	justify-content: space-between;
 	bottom: 0;
 	left: 0;
-	position: absolute;
 	background-color: #1a1a1a;
-
+	position: absolute;
 }
 
 .footer>p,
